--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,24 +30,19 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_tflite: ^1.0.1
-  camera: ^0.10.5+9
-  image: ^3.2.0
-  get: ^4.6.6
   permission_handler: ^11.3.1
-  ultralytics_yolo: ^0.0.3
   path_provider: ^2.1.3
-  flutter_vision: ^1.1.4
-  flutter_speed_dial: ^7.0.0
+  image: ^4.1.7
+  camera: ^0.10.5+9
+  ultralytics_yolo: ^0.0.3
+  camerawesome: ^2.0.1
+
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
-  firebase_core: ^2.27.1
-  firebase_auth: ^4.17.9
-  image_picker: ^0.8.5+3
-  animated_splash_screen: ^1.3.0
+
 
 dev_dependencies:
   flutter_test:
